# agentic-world-simulator

./: .gitignore  RESOURCE_IMPLEMENTATION_PLAN.md  pyproject.toml
docs/design/: agent_testbed_architecture.md  wildfire_simulation_spec.md
docs/tutorial/: 01-world-engine-basics.md  02-sensors-and-sampling.md  03-ai-agents-and-detection.md  04-full-pipeline.md
docs/tutorial/assets/: diag-01-data-pipeline.md  diag-02-cluster-agent-topology.md  diag-03-supervisor-fanout.md  diag-04-supervisor-cluster-relationship.md  diag-05-supervisor-to-subgraph.md
docs/tutorial/content/: 00-getting-started.md  00-setup.md  01-world-engine-and-grid.md  02-cluster-agent-stub.md  02-domain-physics-fire-spread.md  03-cluster-agent-llm.md  03-sensors-noisy-observations.md  04-full-sensor-agent-pipeline.md  04-sensor-inventory-and-publisher.md  05-event-queue-and-bridge-consumer.md  05-supervisor-agent-stub.md  06-supervisor-agent-llm.md  07-resources-plus-supervisor-tools.md  08-full-pipeline-everything-wired.md  08-full-sensor-agent-pipeline.md  09-scenario-knobs-resilience.md  09-supervisor-agent-stub.md  10-evaluation-ground-truth-vs-agent.md  11-resources-preparedness-assets.md  12-resources-plus-supervisor-tools.md  13-full-pipeline-everything-wired.md  14-scenario-knobs-resilience.md  15-evaluation-ground-truth-vs-agent.md  overview.md
docs/tutorial/goals/: 00-setup.md  01-world-engine.md  02-cluster-agent-stub.md  03-cluster-agent-llm.md  04-full-sensor-pipeline.md  (+6 more)
examples/: agent_connector.py  config_builder.py  event_loop_builder.py  hello_world.py  main-builder.py  pipeline_builder.py  pipeline_demo.py  pipeline_demo_annotated.py  render.py  supervisor_runner.py  wildfire_demo.py  world_builder.py
notebooks/: pipeline_demo.ipynb
src/: config.py
src/actuators/: __init__.py  base.py
src/agents/: __init__.py
src/bridge/: __init__.py  consumer.py  pipeline_runner.py
src/event_loop/: __init__.py  coverage.py  loop.py  sensor_filter.py  sensor_generator.py  store.py
src/resources/: __init__.py  base.py  evaluator.py  inventory.py
src/sensors/: __init__.py  base.py  publisher.py
src/tools/: __init__.py  fire_behavior_tools.py  resource_tools.py  sensor_tools.py  supervisor_tools.py
src/transport/: __init__.py  queue.py  schemas.py
src/workflow/: __init__.py  runner.py  stub.py
src/world/: __init__.py  cell_state.py  environment.py  generic_engine.py  generic_grid.py  grid.py  physics.py  sensor_inventory.py  weather.py
tests/: conftest.py  test_config.py
tests/actuators/: test_base.py
tests/agents/: test_cluster.py  test_supervisor.py
tests/bridge/: test_consumer.py
tests/event_loop/: test_loop.py  test_sensor_filter.py  test_store.py
tests/integration/: test_rothermel_pipeline.py
tests/resources/: test_base.py  test_evaluator.py  test_inventory.py  test_resource_tools.py
tests/sensors/: test_base.py  test_publisher.py  test_world_sensors.py
tests/tools/: conftest.py  test_fire_behavior_tools.py  test_sensor_tools.py  test_supervisor_tools.py
tests/transport/: conftest.py  test_queue.py  test_schemas.py  test_topics.py
tests/workflow/: test_runner.py
tests/world/: test_cell_state.py  test_engine.py  test_fire_spread.py  test_generic_engine.py  test_generic_grid.py  test_grid.py  test_physics.py  test_scenarios.py  test_sensor_inventory.py  test_weather.py
(+56 files in other folders)
