[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "world-simulator"
version = "0.1.0"
description = "Event-driven world simulation engine with LangGraph agent runtime"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Chris Lomeli"}
]
keywords = ["langgraph", "agent", "simulation", "wildfire", "world-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=0.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "nbconvert>=7.0",
]

[project.urls]
Homepage = "https://github.com/chrislomeli/world-simulator"

[tool.hatch.build.targets.wheel]
packages = ["src/sensors", "src/tools", "src/domains", "src/transport", "src/bridge", "src/world", "src/agents", "src/resources"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
